

Version 1.7.5

* Increase the flexibility of RubyArray API by accepting Collection in certain methods

* Change Comparable<RubyArray> to Comparable<List> in RubyArray

* Improve the quality of entire JavaDoc

* Deprecate RubyCollections#newRubyString


Version 1.8.0

+ Add Ruby.Enumerable, Ruby.Enumerator and Ruby.LazyEnumerator interfaces

+ Add RubySet

- Remove deprecated methods

- Remove RubyCollections::newRubyRange

+ Expend RubyDate API

+ Add RubyEnumerator::of, RubyEnumerator::copyOf, RubyLazyEnumerator::of & RubyLazyEnumerator::copyOf

* Increase the acceptable number of RubyCollections::rh arguments from 20 to 26 key-value pairs


Version 1.8.1

* Fix RubyArray#sample bug


Version 1.8.2

+ Add RubyIO::open(File) and RubyIO::open(InputStream) methods

* Add Boolean.False detection to RubyEnumerable#allʔ, RubyEnumerable#anyʔ, RubyEnumerable#noneʔ and RubyEnumerable#oneʔ


Version 1.9.0

+ Add RubyIterables & RubyStrings

* Deprecate all methods which require Java reflection

+ Add chunkWhile method to Enumerable

+ Add grepV method to Enumerable

+ Add sliceAfter method to Enumerable

+ Add sliceWhen method to Enumerable

+ Add toH method to Enumerable

- Remove @SafeVarargs

Version 2.0.0

* JDK 1.8

+ Add Ruby class

+ Update all methods to Ruby 2.4

+ Add RubyRange#closed, #closedOpen, #open, #openClosed

+ Add #allWeek, #allMonth, #allQuarter, #allYear to RubyDate

+ Add #nextWeek, #nextMonth, #nextQuarter, #nextYear to RubyDate

+ Add #prevWeek, #prevMonth, #prevQuarter, #prevYear to RubyDate

+ Add #mondayʔ, #tuesdayʔ, #wednesdayʔ, #thursdayʔ, #friday?, #saturdayʔ, #sundayʔ, #onWeekdayʔ, #onWeekendʔ to RubyDate

+ Add RubyDate#step, #upto, #downto

* Change #dayOfWeek to #wday,  #dayOfMonth to #mday,  #dayOfYear to #yday in RubyDate 

+ Add LocalDateTime Successor

+ Improve Generic declarations of functional interfaces in methods


Version 2.0.1

+ Add toList() API to Ruby.Enumerable

+ Add toMap() API to RubyHash

+ Add toSet() API to RubySet